[tool.poetry]
name = "ppo_details"
version = "0.1.0"
description = ""
authors = ["Jagjit Singh <sainijagjit@rocketmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "^1.7.1"
stable-baselines3 = "^1.1.0"
wandb = "0.12.1"
pyglet = "^1.5.19"
opencv-python = "^4.5.3"

# Optional dependencies
spyder =  {version = "^5.1.1", optional = true}
ale-py = {version = "^0.7", optional = true}
AutoROM = {version = "^0.4.2", optional = true, extras = ["accept-rom-license"]}
pybullet = {version = "3.1.8", optional = true}
gym-microrts = {version = "^0.2.0", optional = true}
free-mujoco-py = {version = "^2.1.6", optional = true}
envpool = {version = "^0.4.4", optional = true}
procgen = {version = "^0.10.6", optional = true}
gym = "^0.26.2"
tensorboard = "^2.17.0"
pygame = "^2.6.0"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
atari = ["ale-py", "AutoROM"]
pybullet = ["pybullet"]
gym-microrts = ["gym-microrts"]
spyder = ["spyder"]
mujoco = ["free-mujoco-py"]
envpool = ["envpool"]
procgen = ["procgen"]